2005-03-02  Guillaume Smet <guillaume-gforge@smet.org>

	* minor cosmetic fixes
	* fixed typos in French translation
	* applied [#1077] Minor patch for french translation by Alain Peyrat
	* fixed an history bug in project manager
	* fixed [#1081] Error message received when assigning tasks
	* fixed [#1078] Missing parameters in call to setup function for SOAP
	tracker call
	* fixed [#792] 'My personal page' submitted items includes those submitted
	to deleted projects

2005-03-02  Ognyan Kulev  <ogi@fmi.uni-sofia.bg>

	* www/include/languages/Bulgarian.tab: Pulled translation from
	OpenFMI GForge.
	* Content of INSTALL file is merged into Installation Guide.
	Other small improvements.  /var/www is recommended instead of
	/usr/share as place to install.
	* docs/docbook/Makefile: xsl/db2latex/xsl instead of
	xsl/db2latex/latex.
	* docs/docbook/INSTALL: Debian-specific instructions are moved in
	own section.  debianhtml, debianpdf and debian targets are
	documented.

2005-02-27  Tim Perdue <tim@gforge.org>

	* mopping up permission logic for the different tracker roles -
	admin, tech, submitter, everyone else. The logic is clearer now 
	and is enforced at the Artifact.class level, rather than at 
	www interface.

2005-02-28  Guillaume Smet <guillaume-gforge@smet.org>

	* fixed an array initialization bug in ArtifactType
	* made feedback themable
	* fixed minor issues in RPM packaging
	* updated French translation
	* fixed minor layout problems
	* fixed the email encoding problem

2005-02-27  Tim Perdue <tim@gforge.org>

	* Trying to enhance INSTALL file with detailed manual installation
	instructions
	* modifications to cvstracker to make it activated by default in gforge
	* "Extra Fields" code enhancements allow for copying extra fields to 
	other trackers, deleting extra fields, and supporting "Multi-select" boxes
	and "checkboxes" as extra-field types.

2005-02-25  Christian Bayle <bayle@debian.org>

	* nss-pgsql optimization